syntax="proto3";

package greetpb;
option go_package="/greetpb";

message GreetRequest {
  string firstName = 1;
  string lastName = 2;
}

message GreetResponse {
  string response = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {};
}